# File-Compressor

./: CMakeLists.txt  README.md  data.txt  test.txt
app/: CMakeLists.txt
app/src/: main.cpp
compressor_lib/: CMakeLists.txt
compressor_lib/include/compressor/: fileHandler.h  huffmanTree.h
compressor_lib/src/: fileHandler.cpp  huffmanTree.cpp
